[package]
name = "ccjanus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
